--- a/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/wwwroot/index.html
+++ b/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/wwwroot/index.html
@@ -10,6 +10,7 @@
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
     <link href="Insightify.SPA.styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://use.typekit.net/jel5iww.css">
 </head>
 
 <body>
