--- a/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/wwwroot/index.html
+++ b/src/Web/BlazorClient/Insightify.SPA/Insightify.SPA/wwwroot/index.html
@@ -28,6 +28,7 @@
         <a class="dismiss">🗙</a>
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="https://kit.fontawesome.com/1f167bd3a1.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
