--- a/src/Web/Insightify.SPA/Insightify.SPA/wwwroot/index.html
+++ b/src/Web/Insightify.SPA/Insightify.SPA/wwwroot/index.html
@@ -32,7 +32,9 @@
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
     <script src="https://kit.fontawesome.com/1f167bd3a1.js" crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/lightweight-charts/dist/lightweight-charts.standalone.production.js"></script>
+    <script src="charts/dashboard/graph.js"></script>
+    <script src="charts/dashboard/lines-graph-chart.js"></script>
     <script>
         window.addScrollListener = (dotNetRef) => {
             window.onscroll = () => {
